--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3c6d6bf5",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5eecb90a",
    "metadata": {},
    "outputs": [
@@ -217,21 +217,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0/3169\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 26\u001b[0m\n\u001b[0;32m     24\u001b[0m     timesteplist_month\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mdate_range(start\u001b[38;5;241m=\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mdatetime(\u001b[38;5;241m2022\u001b[39m,month,\u001b[38;5;241m1\u001b[39m,tzinfo\u001b[38;5;241m=\u001b[39mpytz\u001b[38;5;241m.\u001b[39mtimezone(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCET\u001b[39m\u001b[38;5;124m'\u001b[39m)),end\u001b[38;5;241m=\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mdatetime(\u001b[38;5;241m2023\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m,tzinfo\u001b[38;5;241m=\u001b[39mpytz\u001b[38;5;241m.\u001b[39mtimezone(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCET\u001b[39m\u001b[38;5;124m'\u001b[39m))\u001b[38;5;241m+\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mtimedelta(days\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m),freq\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m15Min\u001b[39m\u001b[38;5;124m'\u001b[39m,tz\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCET\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     25\u001b[0m charging_session_data_CS_month\u001b[38;5;241m=\u001b[39mcharging_session_data_CS[charging_session_data_CS[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mArrival time\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mmonth\u001b[38;5;241m==\u001b[39mmonth]\n\u001b[1;32m---> 26\u001b[0m results_CS_month\u001b[38;5;241m=\u001b[39mcapacity_tariffs(charging_session_data_CS_month, timesteplist_month, CS, day_ahead_prices, dynamic_retail_prices_considered, tariff_value,initial_peak)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m timesteplist_month:\n\u001b[0;32m     28\u001b[0m     capacity_total\u001b[38;5;241m.\u001b[39mat[t,CS]\u001b[38;5;241m=\u001b[39mresults_CS_month\u001b[38;5;241m.\u001b[39mloc[t,CS]\n",
-      "File \u001b[1;32mc:\\Users\\4013425\\Documents\\GitHub\\Grid-tariffs-vs-EV-charging\\helperfunctions\\capacity_model.py:18\u001b[0m, in \u001b[0;36mcapacity_tariffs\u001b[1;34m(charging_session_data, timesteplist, CS, DA_prices, dynamic_retail_prices_considered, capacity_tariff, initial_peak)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcapacity_tariffs\u001b[39m(charging_session_data, timesteplist, CS, DA_prices, dynamic_retail_prices_considered, capacity_tariff, initial_peak):\n\u001b[0;32m     11\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124;03m    Rolling optimization model under capacity tariffs, optimizing each individual timestep to avoid that the model anticipates future charging session in the optimization.\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;124;03m        charging_session_data (pd.DataFrame): EV sessions, including arrival/departure, max charging power, and demand (kWh).\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;124;03m        timesteplist (list): List of datetime timestamps to loop over.\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03m        CS (str): Name to represent the column storing the total charging power in the result DataFrame.\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;124;03m        DA_prices (pd.DataFrame): DataFrame with day-ahead prices indexed by timestamp (€/MWh).\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;124;03m        dynamic_retail_prices_considered (bool): If True, energy costs are included in the objective.\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;124;03m        capacity_tariff (float): Annual cost per extra kW of peak capacity.\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;124;03m        initial_peak (float): Initial contracted or observed peak (kW) available before optimization.\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \n\u001b[0;32m     22\u001b[0m \u001b[38;5;124;03m    Returns:\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;124;03m        pd.DataFrame: DataFrame indexed by timestep, containing optimized total charging power (column CS).\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;66;03m# Initialize results DataFrame\u001b[39;00m\n\u001b[0;32m     27\u001b[0m     resultdf \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame()\n",
-      "File \u001b[1;32mc:\\Users\\4013425\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4075\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4070\u001b[0m is_mi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns, MultiIndex)\n\u001b[0;32m   4071\u001b[0m \u001b[38;5;66;03m# GH#45316 Return view if key is not duplicated\u001b[39;00m\n\u001b[0;32m   4072\u001b[0m \u001b[38;5;66;03m# Only use drop_duplicates with duplicates for performance\u001b[39;00m\n\u001b[0;32m   4073\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_mi \u001b[38;5;129;01mand\u001b[39;00m (\n\u001b[0;32m   4074\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mis_unique\n\u001b[1;32m-> 4075\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[0;32m   4076\u001b[0m     \u001b[38;5;129;01mor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mdrop_duplicates(keep\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m   4077\u001b[0m ):\n\u001b[0;32m   4078\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_item_cache(key)\n\u001b[0;32m   4080\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_mi \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mis_unique \u001b[38;5;129;01mand\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns:\n",
-      "File \u001b[1;32mc:\\Users\\4013425\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:5358\u001b[0m, in \u001b[0;36mIndex.__contains__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   5323\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__contains__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n\u001b[0;32m   5324\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   5325\u001b[0m \u001b[38;5;124;03m    Return a boolean indicating whether the provided key is in the index.\u001b[39;00m\n\u001b[0;32m   5326\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5356\u001b[0m \u001b[38;5;124;03m    False\u001b[39;00m\n\u001b[0;32m   5357\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 5358\u001b[0m     \u001b[38;5;28mhash\u001b[39m(key)\n\u001b[0;32m   5359\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   5360\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 1 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 2 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 3 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 4 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 5 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 6 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 7 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 8 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 9 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 10 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 11 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 12 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 1 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 2 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 3 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 4 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 5 and for dynamic retail prices\n",
+      "Capacity tariff profiles modelled for tariff value of 1 €/kW for month 6 and for dynamic retail prices\n"
      ]
     }
    ],
@@ -263,13 +266,42 @@
     "                charging_session_data_CS_month=charging_session_data_CS[charging_session_data_CS['Arrival time'].dt.month==month]\n",
     "                results_CS_month=capacity_tariffs(charging_session_data_CS_month, timesteplist_month, CS, day_ahead_prices, dynamic_retail_prices_considered, tariff_value,initial_peak)\n",
     "                for t in timesteplist_month:\n",
-    "                    capacity_total.at[t,CS]=results_CS_month.loc[t,CS]\n",
+    "                    capacity_total.at[t,CS]+=results_CS_month.loc[t,CS]\n",
     "\n",
     "                if dynamic_retail_prices_considered==True:\n",
-    "                    print('Capacity tariff profiles modelled for tariff value of '+str(tariff_value)+' €/kW for month '+str(month)+' and for dynamic retail prices')\n",
+    "                    print('Capacity tariff profiles modelled for '+CS+' for tariff value of '+str(tariff_value)+' €/kW for month '+str(month)+' and for dynamic retail prices')\n",
     "                else:\n",
-    "                    print('Capacity tariff profiles modelled for tariff value of '+str(tariff_value)+' €/kW for month '+str(month)+' and for fixed retail prices')\n",
+    "                    print('Capacity tariff profiles modelled for '+CS+' for tariff value of '+str(tariff_value)+' €/kW for month '+str(month)+' and for fixed retail prices')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfce0ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from helperfunctions.capacity_subscription_model import capacity_subscription\n",
+    "exceedance_fee=0.3\n",
+    "for dynamic_retail_prices_considered in [True,False]:\n",
+    "\n",
+    "    capacity_subscription_total=pd.DataFrame(0,index=timesteplist,columns=charging_session_data['Charging station ID'].unique())\n",
+    "    subscribed_capacity_list=[4,8,12]\n",
+    "    for CS in charging_session_data['Charging station ID'].unique():\n",
+    "        capacity_subscription_CS=pd.DataFrame(0,index=timesteplist,columns=subscribed_capacity_list)\n",
+    "        for subscribed_capacity in subscribed_capacity_list:\n",
+    "            resultdf_CS_subscribed_capacity=capacity_subscription(charging_session_data, timesteplist, CS, day_ahead_prices, dynamic_retail_prices_considered, exceedance_fee, subscribed_capacity)\n",
+    "            capacity_subscription_CS[subscribed_capacity]=resultdf_CS_subscribed_capacity[CS].copy()\n",
+    "            if dynamic_retail_prices_considered==True:\n",
+    "                print('Capacity-subscriptionf profiles modelled for '+CS+' for subscribed capacity of '+str(subscribed_capacity)+' kW for dynamic retail prices')\n",
+    "            else:\n",
+    "                print('Capacity-subscriptionf profiles modelled for '+CS+' for subscribed capacity of '+str(subscribed_capacity)+' kW for fixed retail prices')\n",
+    "                \n",
+    "            \n",
+    "\n",
+    "\n",
+    "        \n"
    ]
   }
  ],
