--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "234086ed",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "f9eff474",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "76b4abe0",
    "metadata": {},
    "outputs": [
@@ -122,13 +122,13 @@
       "Volumetric ToU profiles modelled for low tariff value of 0.01 €/kWh and for fixed retail prices\n",
       "Volumetric ToU profiles modelled for low tariff value of 0.02 €/kWh and for dynamic retail prices\n",
       "Volumetric ToU profiles modelled for low tariff value of 0.02 €/kWh and for fixed retail prices\n",
-      "Volumetric ToU profiles modelled for low tariff value of 0.99 €/kWh and for dynamic retail prices\n",
-      "Volumetric ToU profiles modelled for low tariff value of 0.99 €/kWh and for fixed retail prices\n"
+      "Volumetric ToU profiles modelled for low tariff value of 0.03 €/kWh and for dynamic retail prices\n",
+      "Volumetric ToU profiles modelled for low tariff value of 0.03 €/kWh and for fixed retail prices\n"
      ]
     }
    ],
    "source": [
-    "volumetric_tou_tariffvalues=[0.01,0.02,0.99]\n",
+    "volumetric_tou_tariffvalues=[0.01,0.02,0.03]\n",
     "charging_profile_dict['Volumetric_ToU_dynamic']={}\n",
     "charging_profile_dict['Volumetric_ToU_fixed']={}\n",
     "\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "453e1817",
    "metadata": {},
    "outputs": [
@@ -174,12 +174,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Segmented volumetric ToU profiles modelled for low tariff value of 0.01 €/kWh and for dynamic retail prices\n",
-      "Segmented volumetric ToU profiles modelled for low tariff value of 0.01 €/kWh and for fixed retail prices\n",
-      "Segmented volumetric ToU profiles modelled for low tariff value of 0.02 €/kWh and for dynamic retail prices\n",
-      "Segmented volumetric ToU profiles modelled for low tariff value of 0.02 €/kWh and for fixed retail prices\n",
-      "Segmented volumetric ToU profiles modelled for low tariff value of 0.03 €/kWh and for dynamic retail prices\n",
-      "Segmented volumetric ToU profiles modelled for low tariff value of 0.03 €/kWh and for fixed retail prices\n"
+      "Segmented volumetric ToU profiles modelled for low tariff value of 1e-07 €/kWh and for dynamic retail prices\n",
+      "Segmented volumetric ToU profiles modelled for low tariff value of 1e-07 €/kWh and for fixed retail prices\n",
+      "Segmented volumetric ToU profiles modelled for low tariff value of 0.999999 €/kWh and for dynamic retail prices\n",
+      "Segmented volumetric ToU profiles modelled for low tariff value of 0.999999 €/kWh and for fixed retail prices\n"
      ]
     }
    ],
@@ -199,7 +197,7 @@
     "    tariff_threshold_df=pd.DataFrame(index=timesteplist,columns=['Threshold_1','Threshold_2'])\n",
     "    tariff_threshold_df['Threshold_1']=np.where(tariff_threshold_df.index.hour.isin(low_tariff_hours),4,0)\n",
     "    tariff_threshold_df['Threshold_2']=np.where(tariff_threshold_df.index.hour.isin(high_tariff_hours),0,4)  \n",
-    "    for dynamic_retail_prices_considered in [True, False]:\n",
+    "    for dynamic_retail_prices_considered in [True,False]:\n",
     "        segmented_volumetric_ToU_total=pd.DataFrame(0,index=timesteplist,columns=charging_session_data['Charging station ID'].unique())\n",
     "        for CS in charging_session_data['Charging station ID'].unique():\n",
     "            charging_session_data_CS=charging_session_data[charging_session_data['Charging station ID']==CS]\n",
@@ -664,10 +662,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "dc61f798",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Tariff income    Grid costs  Abs_difference\n",
+      "1e-07      3.220617e-01  61702.337044    6.170201e+04\n",
+      "0.999999   3.264046e+06  53006.441590    3.211039e+06\n"
+     ]
+    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -675,7 +682,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[54], line 181\u001b[0m\n\u001b[0;32m    179\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m    180\u001b[0m     end_date\u001b[38;5;241m=\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mdatetime(\u001b[38;5;241m2023\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m,tzinfo\u001b[38;5;241m=\u001b[39mpytz\u001b[38;5;241m.\u001b[39mtimezone(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCET\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m--> 181\u001b[0m hh_profiles_month\u001b[38;5;241m=\u001b[39mhh_profiles[(hh_profiles\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39mstart_date)\u001b[38;5;241m&\u001b[39m(hh_profiles\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m<\u001b[39mend_date)]\n\u001b[0;32m    182\u001b[0m hh_profiles_month[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexceedance\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mwhere(hh_profiles_month[hh]\u001b[38;5;241m>\u001b[39msubscribed_capacity,hh_profiles_month[hh]\u001b[38;5;241m-\u001b[39msubscribed_capacity,\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m    183\u001b[0m exceedance_month\u001b[38;5;241m=\u001b[39mhh_profiles_month[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexceedance\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.25\u001b[39m\n",
+      "Cell \u001b[1;32mIn[15], line 134\u001b[0m\n\u001b[0;32m    132\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[0;32m    133\u001b[0m         end_date\u001b[38;5;241m=\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mdatetime(\u001b[38;5;241m2023\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m,tzinfo\u001b[38;5;241m=\u001b[39mpytz\u001b[38;5;241m.\u001b[39mtimezone(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCET\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m--> 134\u001b[0m     hh_profiles_month\u001b[38;5;241m=\u001b[39mhh_profiles[(hh_profiles\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39mstart_date)\u001b[38;5;241m&\u001b[39m(hh_profiles\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m<\u001b[39mend_date)]\n\u001b[0;32m    135\u001b[0m     avg_peak\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39mhh_profiles_month[hh]\u001b[38;5;241m.\u001b[39mmax()\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m12\u001b[39m\n\u001b[0;32m    136\u001b[0m total_tariff_income\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39mavg_peak\u001b[38;5;241m*\u001b[39mtariff_value\n",
       "File \u001b[1;32mc:\\Users\\4013425\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4093\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4091\u001b[0m \u001b[38;5;66;03m# Do we have a (boolean) 1d indexer?\u001b[39;00m\n\u001b[0;32m   4092\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m com\u001b[38;5;241m.\u001b[39mis_bool_indexer(key):\n\u001b[1;32m-> 4093\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_bool_array(key)\n\u001b[0;32m   4095\u001b[0m \u001b[38;5;66;03m# We are left with two options: a single key, and a collection of keys,\u001b[39;00m\n\u001b[0;32m   4096\u001b[0m \u001b[38;5;66;03m# We interpret tuples as collections only for non-MultiIndex\u001b[39;00m\n\u001b[0;32m   4097\u001b[0m is_single_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_list_like(key)\n",
       "File \u001b[1;32mc:\\Users\\4013425\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4155\u001b[0m, in \u001b[0;36mDataFrame._getitem_bool_array\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4152\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcopy(deep\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m   4154\u001b[0m indexer \u001b[38;5;241m=\u001b[39m key\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m-> 4155\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_take_with_is_copy(indexer, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\4013425\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pandas\\core\\generic.py:4153\u001b[0m, in \u001b[0;36mNDFrame._take_with_is_copy\u001b[1;34m(self, indices, axis)\u001b[0m\n\u001b[0;32m   4142\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[0;32m   4143\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_take_with_is_copy\u001b[39m(\u001b[38;5;28mself\u001b[39m, indices, axis: Axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Self:\n\u001b[0;32m   4144\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   4145\u001b[0m \u001b[38;5;124;03m    Internal version of the `take` method that sets the `_is_copy`\u001b[39;00m\n\u001b[0;32m   4146\u001b[0m \u001b[38;5;124;03m    attribute to keep track of the parent dataframe (using in indexing\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4151\u001b[0m \u001b[38;5;124;03m    See the docstring of `take` for full explanation of the parameters.\u001b[39;00m\n\u001b[0;32m   4152\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4153\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indices\u001b[38;5;241m=\u001b[39mindices, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[0;32m   4154\u001b[0m     \u001b[38;5;66;03m# Maybe set copy if we didn't actually change the index.\u001b[39;00m\n\u001b[0;32m   4155\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m result\u001b[38;5;241m.\u001b[39m_get_axis(axis)\u001b[38;5;241m.\u001b[39mequals(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_axis(axis)):\n",
@@ -792,6 +799,7 @@
     "            total_tariff_income+=total_tariff_income_CS/len(EV_charging_profile.columns)*no_CS #total tariff income from EV charging is equal to average tariff income per modelled charging stations times the number of expected charging stations\n",
     "            tariff_income_grid_cost_df.at[str(low_tariff_value),'Tariff income']=total_tariff_income\n",
     "        tariff_income_grid_cost_df['Abs_difference']=abs(tariff_income_grid_cost_df['Tariff income']-tariff_income_grid_cost_df['Grid costs'])\n",
+    "        print(tariff_income_grid_cost_df)\n",
     "        selected_tariff_value=tariff_income_grid_cost_df['Abs_difference'].idxmin() #select tariff value with minimum difference between tariff income and grid costs\n",
     "        tariff_value_dict[EV_adoption_rate][retail_electricity_prices].at['Segmented_volumetric_ToU','Tariff value']=float(selected_tariff_value)\n",
     "        total_load_dict[EV_adoption_rate][retail_electricity_prices]['Segmented_volumetric_ToU']=total_load_df['Total load (kW)'].copy()\n",
